<?xml version="1.0"?>
<package format="2">
  <name>agv_node</name>
  <version>0.0.0</version>
  <description>Node that make the turtlebot follow the same path between two destinations every time</description>

  <maintainer email="christoffer@todo.todo">christoffer</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
